# kaggen

./: .coveragerc  .gitignore  LICENCE  README.md  docker-compose.yml  poetry.toml  pyproject.toml  pytest.ini  requirements.txt  setup.py
configs/: augment.yaml  classes.yaml  model.yaml  paths.yaml  train.yaml
configs/experiment/: classification_cifar10.yml
configs/templates/: NOTE  augment.yaml  classes.yaml  data.yaml  model.yaml  paths.yaml  train.yaml
docs/source/: conf.py  index.rst
kaggen/: __init__.py  cli.py  datamodules.py  dataset.py  datasets.py  lit_callbacks.py  lit_utils.py  loaders.py  models.py  train.py  typed.py  utils.py
kaggen/train/: augmentations.py  loaders.py  metrics.py  pipeline.py
scripts/: train_model.py  unit_tests.sh
